adding other contracts to swagger - api/docs.
